bootstrap/argo-cd/manifest/common.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
spec:
  parentRefs:
    - kind: Gateway
      namespace: traefik
      name: traefik-gateway
      sectionName: websecure
  hostnames:
    - argo-cd.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
spec:
  parentRefs:
    - kind: Gateway
      namespace: traefik
      name: traefik-gateway
      sectionName: web
  hostnames:
    - argo-cd.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
